fixing alignment issue

--- a/src/screens/profile/Profile.css
+++ b/src/screens/profile/Profile.css
@@ -1,4 +1,4 @@
-.font-size{
+#profile-image{
   width: 10rem;
-  height: 10rem;
+  height: 6rem;
 }
